fix : Fix display on smaller screens

--- a/web/src/Styles/Components/repositoryContainer.module.scss
+++ b/web/src/Styles/Components/repositoryContainer.module.scss
@@ -17,3 +17,13 @@
     grid-gap: 10px;
     margin-bottom: 10px;
 }
+
+@media screen and (max-width : 800px) {
+    .reposGridContainer{
+        display : flex;
+        flex-direction: column;
+				align-items: center;
+        row-gap:10px;
+        margin-bottom: 10px;
+    }
+}
